# autolabeler

./: .dvcignore  .gitignore  CLI_USAGE.md  Dockerfile  FED_HEADLINES_QUICK_START.md  IMPROVEMENTS.md  INSTALLATION.md  PHASE1_COMPLETE.md  PHASE1_DELIVERABLES.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_TEST_SUMMARY.md  PHASE3_COMPLETE.md  QUICKSTART.md  README.md  RULE_GENERATION.md  SETUP_SUMMARY.md  VALIDATION_IMPLEMENTATION.md  advanced-labeling.md  docker-compose.yml  pyproject.toml  run_phase1.py  run_phase2.py  test_async_batch.py  test_fed_pipeline.py  verify_phase2.sh
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: phase1-tests.yml  phase2-tests.yml
.hive-mind/: API_SPECIFICATIONS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MASTER_IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_INDEX.md  PHASE1_TESTING_IMPLEMENTATION_SUMMARY.md  PHASE1_TEST_QUICK_START.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_IMPLEMENTATION_COMPLETE.md  QUICK_START_GUIDE.md  README.md  RESEARCH_SUMMARY.md  TESTING_STRATEGY.md  algorithm_quick_reference.md  analyst_agent_summary.md  hive.db  hive.db-shm  hive.db-wal  phase1_action_plan.md  phase1_research_report.md  phase2_active_learning_spec.md  phase2_advanced_rag_specification.md  phase2_dependencies.txt  phase2_dspy_specification.md  phase2_research_report.md  phase2_weak_supervision_spec.md  phase3_architecture_design.md  phase3_dependencies.txt  phase3_research_report.md  quality_control_data_schemas.py  quality_control_system_design.md  research-report-sota-annotation-2025.md
.hive-mind/sessions/: hive-mind-prompt-swarm-1759880001509-jnrfqyc33.txt  hive-mind-prompt-swarm-1759889407923-91xaknorz.txt  session-1759880001539-b1jrosxt6-auto-save-1759880033010.json  session-1759889407924-e218f0l9u-auto-save-1759889439471.json
configs/: config_gemini_rules.json  config_rule_generation.json  config_speaker_extraction.json  config_speaker_independence.json  enhanced_task_example.json  example.yaml  fed_headlines.yaml  fed_headlines_tasks.json  pipeline_full_workflow.json  pipeline_speaker_extraction.json  pipeline_speaker_independence.json  pipeline_speaker_independence_ensemble.json  pipeline_speaker_independence_rules.json  policy_uncertainty_news_tasks.json  policy_uncertainty_transcripts_tasks.json  speaker_independence_enhanced.json  tpu.yaml
datasets/: human_labeled_20240130.csv  human_labeled_LIVE_20240717.csv  human_labeled_with_speaker.csv  stacked_headline_scores_simple.csv
docs/: BUDGET_TRACKING_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  README.md  REFACTORING_IMPROVEMENTS.md  architecture_analysis.md  configuration.md  debug_prompts.md  diagnostics.md  dvc_setup_guide.md  ensemble_system.md  fed-headlines-labeling-guide.md  gap-analysis.md  integration_summary.md  iteration-workflow.md  openrouter-setup.md  phase3-multi-label-classification.md  probe-model.md  validation_guide.md
docs/research/: cost-tracking-api-research.md  cost-tracking-summary.md
examples/: USAGE_GUIDE.md  cli_usage_example.py  config_example.json  context_aware_labeling.py  enhanced_labeling_demo.py  enhanced_rag_example.py  ensemble_labeling_example.py  ensemble_workflow_demo.py  multi_extraction_ensemble.py  phase2_advanced_rag_example.py  phase2_dspy_optimization_example.py  phase3_constitutional_ai_example.py  phase3_dpo_alignment_example.py  phase3_drift_detection_example.py  phase3_multi_agent_example.py  phase3_staple_ensemble_example.py  prompt_tracking_example.py  quality_monitoring_example.py  rule_enhanced_labeling.py  rule_generation_example.py  simple_cli_usage.py  validation_example.py
knowledge_bases/speaker_independence_enhanced/: metadata.json
knowledge_bases/speaker_independence_with_rules/: examples.parquet  metadata.json
outputs/: test_100_labeled.csv
outputs/fed_headlines/: phase1_learned_rules.json
prompt_store/fed_speaker_extraction/: prompts.json  usage_log.csv
prompt_store/fed_speaker_test/: prompts.json  usage_log.csv
prompt_store/speaker_independence_enhanced/: prompts.json  usage_log.csv
prompt_store/speaker_independence_with_rules/: prompts.json  usage_log.parquet
prompt_store/test_debug_prompts/: prompts.json  usage_log.parquet
prompt_store/test_openrouter_batch/: prompts.json  usage_log.parquet
prompts/example/: candidate.md  examples.md  hypotheses.yaml  mistakes.md  program_gen.md  rules.md  system.md  verify.md
prompts/fed_headlines/: candidate.md  examples.md  hypotheses.yaml  mistakes.md  program_gen.md  rules.md  system.md  verify.md
prompts/tpu/: candidate.md  examples.md  hypotheses.yaml  mistakes.md  program_gen.md  rules.md  system.md  verify.md
results/: speaker_independence_rules_output.csv
results/speaker_independence_with_rules/: evaluation_metrics.json  evaluation_report.md
rulesets/: cb_independence_ruleset_20250610_161047.json  fed_hawk_dove_iterative_progress.json  fed_relevance_iterative_progress.json
scripts/: calibrate_jury.py  deduplicate_rules.py  export_for_distillation.py  fed_headlines_labeling_pipeline.py  fed_headlines_manual_run.sh  generate_programs.py  optimize_prompts.py  policy_unc_news_phase1.py  policy_unc_news_phase2.py  policy_unc_transcripts_phase1.py  policy_unc_transcripts_phase2.py  run_diagnostics.py  run_labeling.py  run_lit.py  run_phase1_tests.sh  train_probe.py
scripts/utilities/: view_debug_prompts.py
src/autolabeler/: __init__.py  active_learning.py  agents.py  autolabeler_v2.py  cli.py  config.py  constitutional.py  corporate.py  ensemble.py  knowledge_base.py  labeler.py  model_config.py  models.py  openrouter.py  openrouter_client.py  prompt_store.py  rule_generator.py  synthetic_generator.py
src/sibyls/: __init__.py
templates/: speaker_extraction_prompt.j2  speaker_independence_prompt.j2
tests/: README.md  conftest.py  test_cascade_strategy.py  test_enhanced_pipeline_integration.py  test_unified_pipeline.py  test_utils.py
tests/integration/: test_phase2_implementation.py
(+157 files in other folders)
